<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:clickable="true"
        app:backgroundTint="#E7EAED"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_arrow_left_24"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/welcome_back"
        android:textColor="#173430"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/hi_there_you_ve_been_missed"
        android:textColor="#617D79"
        app:layout_constraintEnd_toEndOf="@+id/tv1"
        app:layout_constraintStart_toStartOf="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/ctm_edittext"
        android:drawableEnd="@drawable/baseline_email_24"
        android:ems="10"
        android:textColor="@color/black"
        android:textColorHint="#617D79"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ctm_edittext"
        android:drawableEnd="@drawable/baseline_lock_24"
        android:ems="10"
        android:textColorHint="#617D79"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/don_t_have_an_account"
            android:textColor="#617D79"/>

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:textColor="#173430" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>